<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/display_profile_picture"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/dummy" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/edit_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="140dp"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:tint="#000" />
            </RelativeLayout>

            <TextView
                android:id="@+id/email_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/display_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                    android:hint="@string/email"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/display_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                    android:ellipsize="end"
                    android:hint="@string/address"
                    android:maxLines="2"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/display_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                    android:ellipsize="end"
                    android:hint="@string/phone"
                    android:maxLines="2"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:textSize="18sp" />


            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="lang"
                android:text="@string/select_language" />
            <!--

                        <EditText
                            android:id="@+id/display_providerId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

            -->

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
